kubernetes/traefik-dashboard/traefik-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-34.2.1_up34.2.0
  name: traefik
  namespace: kube-system
spec:
  clusterIP: 10.43.197.65
  clusterIPs:
    - 10.43.197.65
  ipFamilies:
    - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: traefik
      nodePort: 30546
      port: 8080
      targetPort: traefik
    - name: web
      nodePort: 32230
      port: 80
      targetPort: web
    - name: websecure
      nodePort: 32597
      port: 443
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  type: LoadBalancer
