kubernetes/traefik-dashboard/traefik-enable-dashboard.yaml
# Note: insecure!

# https://github.com/traefik/traefik-helm-chart/blob/master/traefik/values.yaml#L668
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: traefik-dashboard
    namespace: kube-system
    annotations:
      traefik.ingress.kubernetes.io/router.entrypoints: web
  spec:
    rules:
    - host: traefik.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik
              port:
                number: 9000
